--- a/export-maven/pom.xml
+++ b/export-maven/pom.xml
@@ -6,14 +6,14 @@
 
   <groupId>com.huaweicloud</groupId>
   <artifactId>export-maven</artifactId>
-  <version>0.0.3</version>
+  <version>1.0.0</version>
 
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>com.huaweicloud</groupId>
         <artifactId>spring-cloud-huawei-dependencies</artifactId>
-        <version>0.0.3</version>
+        <version>1.0.0-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
