demo default config change

--- a/spring-cloud-huawei-sample/canary-demo/canary-consumer/src/main/resources/bootstrap.yml
+++ b/spring-cloud-huawei-sample/canary-demo/canary-consumer/src/main/resources/bootstrap.yml
@@ -9,7 +9,7 @@ spring:
           delay: 10000
       credentials:
         enabled: true
-        accessKey: ak
-        secretKey: sk
-        project: cn-north-4
-        akskCustomCipher: default
+#        accessKey: ak
+#        secretKey: sk
+#        project: cn-north-4
+#        akskCustomCipher: default
