--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -5,18 +5,17 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-huawei</artifactId>
-    <version>1.2.0</version>
+    <version>1.2.0-Edgware</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>spring-cloud-huawei-dependencies</artifactId>
   <packaging>pom</packaging>
-  <version>1.2.0</version>
+  <version>1.2.0-Edgware</version>
   <name>Spring Cloud Huawei Dependencies</name>
   <properties>
-    <spring-cloud.version>2.0.4.RELEASE</spring-cloud.version>
-    <spring-boot.version>2.0.9.RELEASE</spring-boot.version>
+    <spring-boot.version>1.5.22.RELEASE</spring-boot.version>
     <feign-core.version>9.5.1</feign-core.version>
     <httpclient.version>4.5.9</httpclient.version>
     <jackson-databind.version>2.9.10.3</jackson-databind.version>
@@ -124,21 +123,21 @@
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-commons-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
+        <version>	1.3.6.RELEASE</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-netflix-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
+        <version>1.4.7.RELEASE</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-openfeign-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
+        <version>2.0.4.RELEASE</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
