--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-router/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-router/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-starter-huawei</artifactId>
-    <version>1.2.0</version>
+    <version>1.2.0-Edgware</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
