--- a/spring-cloud-huawei-sample/discovery-demo/price-provider/src/main/resources/application.yaml
+++ b/spring-cloud-huawei-sample/discovery-demo/price-provider/src/main/resources/application.yaml
@@ -7,12 +7,13 @@ spring:
   cloud:
     servicecomb:
       discovery:
+        watch: false
         enabled: true
 #        multiple registries
         address: http://127.0.0.2:30100,http://127.0.0.1:30100
         serviceName: price
         version: 0.0.1
-        healthCheckInterval: 30
+        healthCheckInterval: 1
       credentials:
         enabled: true
         accessKey: your ak
