--- a/spring-cloud-huawei-sample/swagger-demo/javachassis-consumer/src/main/resources/microservice.yaml
+++ b/spring-cloud-huawei-sample/swagger-demo/javachassis-consumer/src/main/resources/microservice.yaml
@@ -8,7 +8,7 @@ cse:
     registry:
       address: http://127.0.0.1:30100
       instance:
-        watch: false
+        watch: true
   config:
     client:
       serverUri: http://127.0.0.1:30103
