--- a/spring-cloud-huawei-sample/config-demo/pom.xml
+++ b/spring-cloud-huawei-sample/config-demo/pom.xml
@@ -5,15 +5,14 @@
   <parent>
     <artifactId>spring-cloud-huawei-sample</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <version>1.2.0</version>
+    <version>1.2.0-Edgware</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.huaweicloud</groupId>
   <artifactId>config-demo</artifactId>
   <properties>
     <java.version>1.8</java.version>
-    <spring-cloud.version>2.1.2.RELEASE</spring-cloud.version>
-    <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
+    <spring-boot.version>1.5.22.RELEASE</spring-boot.version>
   </properties>
   <dependencies>
     <dependency>
@@ -35,7 +34,7 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-commons</artifactId>
-      <version>${spring-cloud.version}</version>
+      <version>1.3.6.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>com.huaweicloud</groupId>
