--- a/spring-cloud-huawei-sample/swagger-demo/javachassis-consumer/pom.xml
+++ b/spring-cloud-huawei-sample/swagger-demo/javachassis-consumer/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>swagger-demo</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <version>1.2.0</version>
+    <version>1.2.0-Edgware</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
