--- a/spring-cloud-huawei-sample/swagger-demo/pom.xml
+++ b/spring-cloud-huawei-sample/swagger-demo/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>spring-cloud-huawei-sample</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <version>1.2.0</version>
+    <version>1.2.0-Edgware</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -18,9 +18,7 @@
   </modules>
   <properties>
     <java.version>1.8</java.version>
-    <spring-cloud.version>2.1.2.RELEASE</spring-cloud.version>
-    <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
-    <java-chassis.version>1.3.0</java-chassis.version>
+    <java-chassis.version>2.0.0</java-chassis.version>
   </properties>
 
 </project>
