add server center watch by websocket (#172)
* add server center watch

* add config control watch

* when watch is true don't check empty list

* fix ut

* refactory

* if list is empty, maybe the service center is restarted , check before clear

* optimization

* fix ut

* optimization

--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -28,6 +28,7 @@
     <snakeyaml.version>1.24</snakeyaml.version>
     <commons-configuration.version>1.10</commons-configuration.version>
     <servicecomb.version>2.0.0</servicecomb.version>
+    <spring.websocket.version>2.2.6.RELEASE</spring.websocket.version>
   </properties>
 
   <dependencyManagement>
@@ -176,6 +177,11 @@
         <groupId>commons-configuration</groupId>
         <artifactId>commons-configuration</artifactId>
         <version>${commons-configuration.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-websocket</artifactId>
+        <version>${spring.websocket.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
