--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -28,7 +28,7 @@
     <snakeyaml.version>1.24</snakeyaml.version>
     <commons-configuration.version>1.10</commons-configuration.version>
     <servicecomb.version>2.0.0</servicecomb.version>
-    <spring.websocket.version>2.2.6.RELEASE</spring.websocket.version>
+    <websocket.version>1.3.5</websocket.version>
   </properties>
 
   <dependencyManagement>
@@ -179,9 +179,9 @@
         <version>${commons-configuration.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-websocket</artifactId>
-        <version>${spring.websocket.version}</version>
+        <groupId>org.java-websocket</groupId>
+        <artifactId>Java-WebSocket</artifactId>
+        <version>${websocket.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
