--- a/spring-cloud-huawei-servicecomb-discovery/pom.xml
+++ b/spring-cloud-huawei-servicecomb-discovery/pom.xml
@@ -75,8 +75,8 @@
       <artifactId>guava</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-websocket</artifactId>
+      <groupId>org.java-websocket</groupId>
+      <artifactId>Java-WebSocket</artifactId>
     </dependency>
   </dependencies>
 </project>
