--- a/spring-cloud-huawei-sample/canary-demo/canary-provider/pom.xml
+++ b/spring-cloud-huawei-sample/canary-demo/canary-provider/pom.xml
@@ -10,11 +10,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>canary-provider</artifactId>
-  <properties>
-    <java.version>1.8</java.version>
-  </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
     <dependency>
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-servicecomb-discovery</artifactId>
