--- a/spring-cloud-huawei-sample/config-demo/pom.xml
+++ b/spring-cloud-huawei-sample/config-demo/pom.xml
@@ -8,12 +8,14 @@
     <version>1.2.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.huaweicloud</groupId>
   <artifactId>config-demo</artifactId>
-  <properties>
-    <java.version>1.8</java.version>
-  </properties>
+
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>${spring-boot.version}</version>
+    </dependency>
     <dependency>
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-servicecomb-discovery</artifactId>
