--- a/spring-cloud-huawei-sample/discovery-demo/price-provider/pom.xml
+++ b/spring-cloud-huawei-sample/discovery-demo/price-provider/pom.xml
@@ -26,10 +26,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>price-provider</artifactId>
-  <properties>
-    <java.version>1.8</java.version>
-  </properties>
+
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
