--- a/spring-cloud-huawei-sample/discovery-demo/product-consumer-feign/pom.xml
+++ b/spring-cloud-huawei-sample/discovery-demo/product-consumer-feign/pom.xml
@@ -27,11 +27,11 @@
 
   <artifactId>product-consumer-feign</artifactId>
 
-  <properties>
-    <java.version>1.8</java.version>
-  </properties>
-
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
     <dependency>
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-servicecomb-discovery</artifactId>
@@ -39,12 +39,10 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
-      <version>2.1.2.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-openfeign</artifactId>
-      <version>2.1.2.RELEASE</version>
     </dependency>
   </dependencies>
 </project>
