--- a/spring-cloud-huawei-sample/gateway-demo/pom.xml
+++ b/spring-cloud-huawei-sample/gateway-demo/pom.xml
@@ -16,17 +16,12 @@
     <module>zuul</module>
   </modules>
 
-  <properties>
-    <spring-cloud.version>Greenwich.SR2</spring-cloud.version>
-    <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
-  </properties>
-
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>com.huaweicloud</groupId>
-        <artifactId>spring-cloud-huawei-dependencies</artifactId>
-        <version>${project.version}</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${spring-boot.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -34,6 +29,13 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
         <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.huaweicloud</groupId>
+        <artifactId>spring-cloud-huawei-dependencies</artifactId>
+        <version>${project.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
