--- a/spring-cloud-huawei-sample/swagger-demo/springcloud-provider/pom.xml
+++ b/spring-cloud-huawei-sample/swagger-demo/springcloud-provider/pom.xml
@@ -28,5 +28,15 @@
       <version>${project.version}</version>
     </dependency>
   </dependencies>
-
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${spring-boot.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 </project>
