--- a/spring-cloud-huawei-sample/discovery-demo/ssl-demo/pom.xml
+++ b/spring-cloud-huawei-sample/discovery-demo/ssl-demo/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>discovery-demo</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <version>1.2.0</version>
+    <version>1.3.1-Greenwich</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
