--- a/spring-cloud-huawei-sample/dtm-demo/reserve/Dockerfile
+++ b/spring-cloud-huawei-sample/dtm-demo/reserve/Dockerfile
@@ -4,7 +4,7 @@ ENV LOG_ROOT=/var/log/reserve/
 RUN mkdir -p $APP_ROOT
 RUN mkdir -p $LOG_ROOT
 
-COPY target/reserve-1.2.0/reserve-1.2.0 $APP_ROOT
+COPY target/reserve-1.3.1-Greenwich/reserve-1.3.1-Greenwich $APP_ROOT
 
 
 RUN cd $APP_ROOT && chmod -R 770 .
