--- a/spring-cloud-huawei-sample/dtm-demo/ticket/Dockerfile
+++ b/spring-cloud-huawei-sample/dtm-demo/ticket/Dockerfile
@@ -4,7 +4,7 @@ ENV LOG_ROOT=/var/log/ticket/
 RUN mkdir -p $APP_ROOT
 RUN mkdir -p $LOG_ROOT
 
-COPY target/ticket-1.2.0/ticket-1.2.0 $APP_ROOT
+COPY target/ticket-1.3.1-Greenwich/ticket-1.3.1-Greenwich $APP_ROOT
 
 
 RUN cd $APP_ROOT && chmod -R 770 .
