--- a/spring-cloud-huawei-sample/minimized-demo/provider-demo/pom.xml
+++ b/spring-cloud-huawei-sample/minimized-demo/provider-demo/pom.xml
@@ -17,7 +17,7 @@
       <dependency>
         <groupId>com.huaweicloud</groupId>
         <artifactId>spring-cloud-huawei-dependencies</artifactId>
-        <version>1.2.0</version>
+        <version>1.3.1-Greenwich</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
