--- a/spring-cloud-huawei-sample/swagger-demo/gochassis-consumer/conf/chassis.yaml
+++ b/spring-cloud-huawei-sample/swagger-demo/gochassis-consumer/conf/chassis.yaml
@@ -1,12 +1,13 @@
 ---
 cse:
+  noRefreshSchema: true
   service:
     registry:
       address: http://127.0.0.1:30100
   protocols:
     rest:
       listenAddress: "127.0.0.1:5001"
-  handler:
-    chain:
-      Provider:
-        default: tracing-provider,bizkeeper-provider
+#  handler:
+#    chain:
+#      Provider:
+#        default: tracing-provider,bizkeeper-provider
