--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-governance/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-governance/pom.xml
@@ -3,22 +3,18 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>spring-cloud-huawei-sample</artifactId>
+    <artifactId>spring-cloud-starter-huawei</artifactId>
     <groupId>com.huaweicloud</groupId>
     <version>1.3.3-Hoxton-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>swagger-demo</artifactId>
-  <packaging>pom</packaging>
-  <modules>
-    <module>springcloud-provider</module>
-    <module>javachassis-consumer</module>
-    <module>edge-service</module>
-  </modules>
-
-  <properties>
-    <java-chassis.version>2.0.2</java-chassis.version>
-  </properties>
+  <artifactId>spring-cloud-starter-huawei-governance</artifactId>
+  <dependencies>
+    <dependency>
+      <groupId>com.huaweicloud</groupId>
+      <artifactId>spring-cloud-huawei-governance</artifactId>
+    </dependency>
+  </dependencies>
 
 </project>
