--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
   <groupId>com.huaweicloud</groupId>
   <artifactId>spring-cloud-huawei</artifactId>
-  <version>1.3.1-Greenwich</version>
+  <version>1.3.2</version>
   <packaging>pom</packaging>
   <name>Spring Cloud Huawei</name>
 
