--- a/spring-cloud-huawei-sample/canary-demo/canary-consumer/Dockerfile
+++ b/spring-cloud-huawei-sample/canary-demo/canary-consumer/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:8u181-jdk-alpine
 
 WORKDIR /home/apps/
-ADD target/canary-consumer-1.3.1-Greenwich.jar .
+ADD target/canary-consumer-1.3.2.jar .
 ADD target/lib ./lib
 ADD start.sh .
 
