--- a/spring-cloud-huawei-sample/dtm-demo/ticket/pom.xml
+++ b/spring-cloud-huawei-sample/dtm-demo/ticket/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>dtm-demo</artifactId>
-    <version>1.3.1-Greenwich</version>
+    <version>1.3.2</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
