--- a/spring-cloud-huawei-sample/pom.xml
+++ b/spring-cloud-huawei-sample/pom.xml
@@ -10,7 +10,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.huaweicloud</groupId>
   <artifactId>spring-cloud-huawei-sample</artifactId>
-  <version>1.3.1-Greenwich</version>
+  <version>1.3.2</version>
   <packaging>pom</packaging>
   <properties>
     <java.version>1.8</java.version>
