--- a/spring-cloud-huawei-servicecomb-discovery/pom.xml
+++ b/spring-cloud-huawei-servicecomb-discovery/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-huawei-parents</artifactId>
-    <version>1.3.1-Greenwich</version>
+    <version>1.3.2</version>
     <relativePath>../spring-cloud-huawei-parents</relativePath>
   </parent>
 
