--- a/integration-tests/discovery-tests/price-provider/pom.xml
+++ b/integration-tests/discovery-tests/price-provider/pom.xml
@@ -45,6 +45,9 @@
   <profiles>
     <profile>
       <id>docker</id>
+      <properties>
+        <server.port>8080</server.port>
+      </properties>
       <build>
         <plugins>
           <plugin>
