[#205]fix mixin group id error

--- a/integration-tests/discovery-tests/discovery-tests-client/pom.xml
+++ b/integration-tests/discovery-tests/discovery-tests-client/pom.xml
@@ -162,7 +162,7 @@
             <configuration>
               <mixins>
                 <mixin>
-                  <groupId>org.apache.servicecomb.demo</groupId>
+                  <groupId>com.huaweicloud</groupId>
                   <artifactId>docker-run-config</artifactId>
                   <version>${project.version}</version>
                 </mixin>
