--- a/integration-tests/discovery-tests/price-provider/pom.xml
+++ b/integration-tests/discovery-tests/price-provider/pom.xml
@@ -64,7 +64,7 @@
             <configuration>
               <mixins>
                 <mixin>
-                  <groupId>org.apache.servicecomb.demo</groupId>
+                  <groupId>com.huaweicloud</groupId>
                   <artifactId>docker-build-config</artifactId>
                   <version>${project.version}</version>
                 </mixin>
