--- a/integration-tests/discovery-tests/discovery-tests-client/pom.xml
+++ b/integration-tests/discovery-tests/discovery-tests-client/pom.xml
@@ -84,7 +84,7 @@
                       <JAVA_OPTS>
                         -Dspring.cloud.servicecomb.discovery.address=http://sc.servicecomb.io:30100
                       </JAVA_OPTS>
-                      <JAR_PATH>/price-provider-test-${project.version}.jar</JAR_PATH>
+                      <JAR_PATH>/maven/price-provider-test-${project.version}.jar</JAR_PATH>
                     </env>
                     <links>
                       <link>service-center:sc.servicecomb.io</link>
@@ -115,7 +115,7 @@
                       <JAVA_OPTS>
                         -Dspring.cloud.servicecomb.discovery.address=http://sc.servicecomb.io:30100
                       </JAVA_OPTS>
-                      <JAR_PATH>/order-consumer-test-${project.version}.jar</JAR_PATH>
+                      <JAR_PATH>/maven/order-consumer-test-${project.version}.jar</JAR_PATH>
                     </env>
                     <links>
                       <link>service-center:sc.servicecomb.io</link>
