--- a/integration-tests/discovery-tests/price-provider/pom.xml
+++ b/integration-tests/discovery-tests/price-provider/pom.xml
@@ -42,6 +42,14 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
   <profiles>
     <profile>
       <id>docker</id>
