--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
+sudo: required
 language: java
-
 jdk:
-  - openjdk8
-
+- openjdk8
+services:
+- docker
 cache:
   directories:
-    - "$HOME/.m2"
-
-#before_install:
-#  - cp .maven.settings.xml $HOME/.m2/settings.xml
-
+  - "$HOME/.m2"
+install: true
 jobs:
   include:
-    - stage: Compilation and Installation
-      script: scripts/travis.sh install
+  - stage: Compilation and Installation
+    script: scripts/travis.sh install
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+- bash <(curl -s https://codecov.io/bash)
+
