[#207]improve converage statistics

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
     <profile>
       <id>it</id>
       <modules>
+        <module>coverage-reports</module>
         <module>integration-tests</module>
       </modules>
     </profile>
