--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,6 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven
     - name: Compilation and Installation
-      run: bash scripts/travis.sh install
+      run: bash scripts/build.sh install
     - name: publish coverage report
       run: bash <(curl -s https://codecov.io/bash)
