[#207] fix dependency version is missing

--- a/coverage-reports/pom.xml
+++ b/coverage-reports/pom.xml
@@ -61,20 +61,24 @@
       <artifactId>spring-cloud-huawei-swagger</artifactId>
     </dependency>
 
-    <!-- integration tests -->
+    <!-- integration-tests -->
+    <!-- discovery-tests -->
     <dependency>
       <groupId>com.huaweicloud</groupId>
       <artifactId>discovery-tests-client</artifactId>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.huaweicloud</groupId>
       <artifactId>order-consumer</artifactId>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.huaweicloud</groupId>
       <artifactId>price-provider</artifactId>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
