[#198]first add some test cases and refactor code with two swagger generation mode

--- a/integration-tests/discovery-tests/order-consumer/src/main/resources/application.yaml
+++ b/integration-tests/discovery-tests/order-consumer/src/main/resources/application.yaml
@@ -18,3 +18,7 @@ spring:
         secretKey: your sk
         akskCustomCipher: default
         project: cn-east-2
+
+      # testing servicecomb swagger generation
+      swagger:
+        enableJavaChassisAdapter: true
