--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -18,4 +18,15 @@
     <module>docker-run-config</module>
     <module>discovery-tests</module>
   </modules>
+
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+    </dependency>
+  </dependencies>
 </project>
